--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script type="text/javascript">
 	(function(){
 		emailjs.init({
-			publicKey: "v1cmfhRMpNqL0hqeM",
+			publicKey: "MhJAMjjxpSYIX4yVz",
 		});
 	})();
 	</script>
@@ -369,7 +369,7 @@
 			Message : document.getElementById("Message").value
 	
 		};
-		emailjs.send('service_rbxw2mv', 'template_g8aex63', params).then(
+		emailjs.send('service_b5h69by', 'template_87dalws', params).then(
 			(response) => {
 			  console.log('SUCCESS!', response.status, response.text);
 			},
