--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
     <script type="text/javascript">
     (function(){
         emailjs.init({
-            publicKey: "v1cmfhRMpNqL0hqeM",
+            publicKey: "MhJAMjjxpSYIX4yVz",
         });
     })();
     </script>
@@ -133,7 +133,7 @@
                     CartDetails: formatCartDetails()
                 };
 
-                emailjs.send('service_rbxw2mv', 'template_nbrzmzb', emailParams)
+                emailjs.send('service_b5h69by', 'template_kzhs36y', emailParams)
                     .then((response) => {
                         console.log('SUCCESS!', response.status, response.text);
                         alert('Order placed and email sent successfully!');
