--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
       </div>
    </div>
 </section>
-
+<Script>
 function SendMail() {
     var formData = new FormData(document.getElementById("contact-form"));
     var fileInput = document.getElementById("Image").files[0];
@@ -408,6 +408,7 @@ function SendMail() {
         );
     }
 }
+</Script>
  
 <!--contact sections ends-->
 <!--footer sections starts-->
