--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 			Message : document.getElementById("Message").value
 	
 		};
-		emailjs.send('service_rbxw2mv', 'template_g8aex63', params).then(
+		emailjs.send('service_b5h69by', 'template_87dalws', params).then(
 			(response) => {
 			  console.log('SUCCESS!', response.status, response.text);
 			},
