--- a/index.html
+++ b/index.html
@@ -409,14 +409,14 @@
 	<h3>contact info</h3>
 	<a href="#">+91-9923666690</a>
 	<a href="#">pratikriti06@gmail.com</a>
-	<a href="#">Chatrapati Sambhajinagar,India-400104</a>
+	<a href="#">Chatrapati Sambhajinagar,India-431010</a>
 	<a href="#">connect us on instagram </a>
 	<img src="photos/pay.jpeg" alt="" style="width: 150px;">
 	
 	
 </div>
 </div>
-<div class="credit">created by<span>Ms.Neha Tathe & Ms.Tanvi Kulkarni </span>| all rights reserved|</div>
+<div class="credit">| all rights reserved @pratikriti|</div>
 
 </div>
 </section>
