--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div class="content">
 <h3>mini portraits & customised paintings</hr>
 <span> </span>
-<p> handmade,customised portraits made with love </p>
+<p> handmade,customised paintings made with love </p>
 <a href="#contact" class="btn">shop now</a></div>
 </section>
 <!--home ends-->
