--- a/index.html
+++ b/index.html
@@ -359,23 +359,26 @@
  </section>
 
 <script>
-	function SendMail() {
-		var params = {
-			Name : document.getElementById("Name").value,
-			Email : document.getElementById("Email").value,
-			Number : document.getElementById("Number").value,
-			Message : document.getElementById("Message").value
 	
-		};
-		emailjs.send('service_b5h69by', 'template_87dalws', params).then(
-			(response) => {
-			  console.log('SUCCESS!', response.status, response.text);
-			},
-			(error) => {
-			  console.log('FAILED...', error);
-			},
-		  );
-	}
+function SendMail() {
+  try {
+    var params = {
+      Name: document.getElementById("name").value,
+      Email: document.getElementById("email").value,
+      Number: document.getElementById("phone").value,
+      Message: document.getElementById("message").value
+    };
+    emailjs.send('service_rbxw2mv', 'template_g8aex63', params)
+      .then((response) => {
+        console.log('SUCCESS!', response.status, response.text);
+      }, (error) => {
+        console.log('FAILED...', error);
+      });
+  } catch (error) {
+    console.log('Error sending email:', error);
+  }
+}
+
 </script>
  
 <!--contact sections ends-->
